--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "dotenv": "^17.2.3",
     "leva": "^0.10.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
